Align logo correctly

--- a/app/assets/stylesheets/_structure/_layout.scss
+++ b/app/assets/stylesheets/_structure/_layout.scss
@@ -22,6 +22,7 @@
 .header__inner {
   display: flex;
   padding: 1.5em 0;
+  position: relative;
 }
 
 .header__page-title {
@@ -44,9 +45,10 @@
   transition: transform .3s ease-in-out;
   text-indent: -9999px;
   position: absolute;
+  top: 50%;
   right: 100%;
   margin-right: 1em;
-  margin-top: 0.25em;
+  margin-top: -20px;
 
   &:hover {
     transform: rotate(-25deg);
